Fix spacing, styling

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,8 +8,20 @@ p, h1, h2, h3, h4, h5, h6, em, div, li, span, strong {
   color: var(--global-text-color);
 }
 
+p {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+h2, h3, h4, h5, h6 {
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+
 hr {
   border-top: 1px solid var(--global-divider-color);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 table {
